@startuml

class Operation
Operation *--> Panel
Operation o--> "*" OperationTask

class OperationTask {}
OperationTask *--> TaskType
OperationTask *--> TaskResultType
OperationTask o--> Defect
OperationTask --> "?" Logfile

enum TaskType {
    UploadToSfc
}

enum TaskResultType {
    Success
    Failure
}

class Panel
Panel --> "+" Board

@enduml